--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: HDRUK-Roche Summer School 2023
+title: HDRUK-Roche Hackathon 2024
 logo: /images/logo.svg
-description: 14-17 July 2023
+description: 17-19 April 2024
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
